overflow issue solved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,13 +14,14 @@ body {
     font-family: 'Inter', sans-serif;
     color: #614BC3;
     background: #D0BFFF;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 canvas{
     position: absolute;
     top: 5rem;
     left: 29rem;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 1450px) {
